# peer-deploy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  build-job.toml  upgrade-job.toml  upgrade-remote.sh
.cursor/rules/: interface-parity.mdc
components/ci-controller/: Cargo.toml  README.md
components/ci-controller/src/: bindings.rs  lib.rs
components/ci-controller/wit/: world.wit
components/hello/: Cargo.toml
components/hello/src/: bindings.rs  lib.rs  main.rs
components/hello/wit/: world.wit
crates/agent/: Cargo.toml
crates/agent/src/: job_manager.rs  main.rs  p2p.rs  policy.rs  runner.rs  supervisor.rs  web.rs
crates/agent/src/cmd/: apply.rs  configure.rs  deploy.rs  diag.rs  enroll.rs  init.rs  install.rs  invite.rs  job.rs  mod.rs  p2p.rs  package.rs  policy.rs  push.rs  status.rs  storage.rs  upgrade.rs  util.rs  whoami.rs
crates/agent/src/p2p/: events.rs  gateway.rs  handlers.rs  jobs.rs  jobs_native.rs  jobs_qemu.rs  jobs_wasm.rs  metrics.rs  mod.rs  state.rs  storage.rs
crates/agent/src/p2p/handlers/: apply.rs  mod.rs  push.rs  upgrade.rs  util.rs
crates/agent/src/storage/: mod.rs
crates/agent/src/tui/: network.rs  run.rs  state.rs
crates/agent/src/tui/draw/: footer.rs  header.rs  logs.rs  overview.rs  peers.rs
crates/agent/src/web/: apply.rs  components_ops.rs  connect.rs  deploy.rs  discover.rs  handlers.rs  history.rs  install.rs  jobs.rs  mod.rs  monitor.rs  overview.rs  types.rs  upgrade.rs  utils.rs  volumes.rs  websocket.rs
crates/agent/web/: app.js  index.html  style.css
crates/agent/web/js/: api.js  jobs.js  logs.js  utils.js
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  tui.rs
crates/cli/src/cmd/: apply.rs  configure.rs  deploy.rs  diag.rs  enroll.rs  init.rs  install.rs  invite.rs  mod.rs  push.rs  status.rs  upgrade.rs  util.rs
crates/cli/src/tui/: draw.rs  events.rs  mod.rs  network.rs  run.rs  state.rs
crates/cli/src/tui/draw/: deployments.rs  footer.rs  header.rs  logs.rs  mod.rs  overlay.rs  overview.rs  peers.rs  placeholder.rs  theme.rs  topology.rs  wizard.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
docs/man/: README.md  realm-apply.md  realm-configure.md  realm-deploy-component.md  realm-deploy-package.md  realm-diag-quic.md  realm-enroll.md  realm-init.md  realm-install.md  realm-invite.md  realm-job-artifacts-json.md  realm-job-artifacts.md  realm-job-cancel.md  realm-job-download.md  realm-job-list-json.md  realm-job-list.md  realm-job-logs.md  realm-job-net-list-json.md  realm-job-net-status-json.md  realm-job-status-json.md  realm-job-status.md  realm-job-submit.md  realm-key-show.md  realm-manage.md  realm-p2p-watch.md  realm-package-create.md  realm-policy-set.md  realm-policy-show.md  realm-push.md  realm-status.md  realm-storage-gc.md  realm-storage-ls.md  realm-storage-pin.md  realm-upgrade.md  realm-whoami.md  realm.md
