[workspace]
members = [
	"crates/agent",
	"crates/cli",
	"crates/common",
	"components/hello", "tmp_hello",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["peer-deploy contributors"]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "signal", "time", "fs", "io-util", "sync", "process"] }
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
rand = "0.8"
dirs = "5.0"
blake3 = "1.5"
hostname = "0.4"
async-trait = "0.1"
bs58 = "0.5"
toml = "0.8"
sha2 = "0.10"
cap-std = "2.0"

libp2p = { version = "0.54", features = [
	"tokio",
	"macros",
	"gossipsub",
	"identify",
	"kad",
	"mdns",
	"ping",
	"dns",
	"tcp",
	"quic",
	"noise",
	"yamux",
] }

wasmtime = { version = "25.0", features = ["async"] }
wasmtime-wasi = { version = "25.0" }
futures = "0.3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
