[package]
name = "ci-controller"
version = "0.1.0"
edition = "2021"

[lib]
name = "ci_controller"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"


[features]
default = []
component = []

[package.metadata.component]
package = "ci:controller"

[package.metadata.component.target]
path = "wit"
world = "ci"

[package.metadata.component.target.dependencies]
"wasi:http" = { version = "0.2.7" }


