[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[lib]
name = "hello"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[features]
default = []
component = []

[package.metadata.component]
package = "hello:component"

[package.metadata.component.target]
path = "wit"
world = "hello"

[package.metadata.component.target.dependencies]
"wasi:http" = { version = "0.2.7" }

