[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
base64.workspace = true
rand.workspace = true
dirs.workspace = true
futures.workspace = true

libp2p.workspace = true

wasmtime.workspace = true
wasmtime-wasi.workspace = true
cap-std.workspace = true

toml.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sysinfo = "0.30"

common = { path = "../common" }
clap.workspace = true
