[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
base64.workspace = true
rand.workspace = true
dirs.workspace = true
futures.workspace = true

libp2p.workspace = true

wasmtime.workspace = true
wasmtime-wasi.workspace = true
cap-std.workspace = true

toml.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sysinfo = "0.30"

# Host support for WASI HTTP (incoming-handler)
wasmtime-wasi-http = "25.0"

# HTTP server plumbing to feed requests into components
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
bytes = "1"

common = { path = "../common" }
clap.workspace = true
