[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "realm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
base64.workspace = true
rand.workspace = true
dirs.workspace = true
futures.workspace = true
hostname.workspace = true

libp2p.workspace = true

wasmtime.workspace = true
wasmtime-wasi.workspace = true
cap-std.workspace = true

toml.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sysinfo = "0.30"

# Host support for WASI HTTP (incoming-handler)
wasmtime-wasi-http = "25.0"

# HTTP server plumbing to feed requests into components
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
bytes = "1"

# Web management interface
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["fs", "cors"] }
mime_guess = "2.0"
include_dir = "0.7"
uuid = { version = "1.0", features = ["v4"] }

# CLI dependencies (merged from CLI crate)
clap.workspace = true
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
unicode-width = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

common = { path = "../common" }
time = { version = "0.3.41", features = ["formatting", "parsing"] }
