[package]
name = "realm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
rand.workspace = true
base64.workspace = true
dirs.workspace = true
hostname.workspace = true

libp2p.workspace = true

common = { path = "../common" }
tokio.workspace = true
