[package]
name = "realm-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
libp2p = { workspace = true }
hostname = { workspace = true }

ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
unicode-width = "0.1"
time = { version = "0.3", features = ["macros"] }

common = { path = "../common" }

[features]
default = []

